// Radidone - DBML schema for dbdiagram.io

Project radidone {
  database_type: 'PostgreSQL'
  Note: 'Radidone schema'
}

Table users {
  id             serial        [pk]
  clerk_id       varchar       [unique, not null, note: 'Clerk external auth id']
  name           varchar
  email          varchar       [unique, not null]
  created_at     timestamptz   [not null, default: `now()`]
  updated_at     timestamptz   [not null, default: `now()`]

  Indexes {
    clerk_id [name: "idx_users_clerk_id"]
    email    [name: "idx_users_email"]
  }
}

Table sessions {
  id             serial       [pk]
  user_id        int          [not null, ref: > users.id]
  status         varchar      [not null, default: 'active', note: "CHECK: 'active' | 'completed' | 'archived'"]
  started_at     timestamptz  [default: `now()`]
  ended_at       timestamptz
  created_at     timestamptz  [not null, default: `now()`]
  updated_at     timestamptz  [not null, default: `now()`]

  Indexes {
    user_id    [name: "idx_sessions_user_id"]
    status     [name: "idx_sessions_status"]
    created_at [name: "idx_sessions_created_at"]
  }
}

Table xray_images {
  id             serial      [pk]
  session_id     int         [not null, ref: > sessions.id]
  user_id        int         [not null, ref: > users.id]
  upload_time    timestamptz [not null, default: `now()`]
  metadata       jsonb       // Image meta: orientation, width, height, etc.

  Indexes {
    session_id  [name: "idx_xray_images_session_id"]
    user_id     [name: "idx_xray_images_user_id"]
    upload_time [name: "idx_xray_images_upload_time"]
  }
}

Table annotations {
  id             serial  [pk]
  xray_image_id  int     [not null, ref: > xray_images.id]
  user_id        int     [not null, ref: > users.id]
  session_id     int     [not null, ref: > sessions.id]
  type           varchar [not null, note: "e.g. 'polygon', 'circle', 'tooth-ref'"]
  geometry       jsonb   [not null] // Coordinates, shape properties, etc.
  finding_label  varchar             // What did the student annotate (e.g. "caries", "cyst")
  created_at     timestamptz [not null, default: `now()`]

  Indexes {
    xray_image_id [name: "idx_annotations_xray_image_id"]
    user_id       [name: "idx_annotations_user_id"]
    session_id    [name: "idx_annotations_session_id"]
    created_at    [name: "idx_annotations_created_at"]
  }
}

Table session_conversations {
  id           serial  [pk]
  session_id   int     [not null, ref: > sessions.id]
  sender_role  varchar [not null, note: "CHECK: 'student' | 'mentor'"]
  message_text text
  turn_index   int     [not null] // Chronological order of turn
  created_at   timestamptz [not null, default: `now()`]

  Indexes {
    session_id [name: "idx_session_conversations_session_id"]
    turn_index [name: "idx_session_conversations_turn_index"]
  }
}

Table audio_voices {
  id              serial      [pk]
  session_id      int         [not null, ref: > sessions.id]
  user_id         int         [not null, ref: > users.id]
  conversation_id int         [not null, ref: > session_conversations.id]
  transcript_text text
  created_at      timestamptz [not null, default: `now()`]

  Indexes {
    session_id      [name: "idx_audio_voices_session_id"]
    user_id         [name: "idx_audio_voices_user_id"]
    conversation_id [name: "idx_audio_voices_conversation_id"]
    created_at      [name: "idx_audio_voices_created_at"]
  }
}

Table ai_analysis {
  id             serial      [pk]
  xray_image_id  int         [not null, ref: > xray_images.id]
  analysis_json  jsonb       // Nullable; stores the complete ThakaMed API response when available
  created_at     timestamptz [not null, default: `now()`]

  Indexes {
    xray_image_id [name: "idx_ai_analysis_xray_image_id"]
    created_at    [name: "idx_ai_analysis_created_at"]
  }
}
